IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5/24/12: Fixed problem where eTomo freezes on Ubuntu when is looks for lsof in the wrong directory (In 4.5).(Bug# 1617)

5/21/12: Fixed get_nxyz to take long filenames, which should fix Setupcombine
and some other combine steps (In 4.5).

5/15/12: Made Imodhelp able to complete a partial program name and offer 
choice if several match (In 4.5).

5/15/12: Fix setting of environment variables in Vmstopy (In 4.5).

5/11/12: Fixed Tiltalign array sizes that allowed less than 1440 views
(In 4.5).

5/11/12: Stopped Beadtrack from trying to do outlier removal with 3 points and
fixed an initialization problem (In 4.5).

5/11/12: Fixed Imodfindbeads crash when outputting filtered file (In 4.5).

5/9/12: Fixed 3dmod loading of RGB data with binning in X/Y (In 4.5).

5/7/12: IMOD_4-5-2
5/7/12: Needed to prepend pylib to path in Python scripts because there is a 
pip installer module in some installations (In 4.5).

5/2/12: IMOD_4-5-1 released
5/2/12: Fixed 3dmod leaving tile angle file open, which could keep align.com
from replacing it in Windows (In 4.5).

5/1/12: Fixed archiveorig not removing xray file when restoring, and fixed
cleanup of temporary files when using subm and running combine.com (In 4.5).

4/20/12: Fixed 3dmod's handling of autocontrasting with contrast reversed so
that it produces a mean display value at the target mean, and made it adjust
contrast when float is on and contrast is reversed (In 4.5).

4/20/12: Prevented eTomo from unchecking a disabled computer checkbox in the
Parallel Processing table when there is only one row (In 4.5).(Bug# 1613)

4/15/12: Fixed origin change when resizing with clip (In 4.5).

3/28/12: Fixed division by 0 in Splittilt with small number of input slices
(In 4.5).

3/26/12: IMOD_4-6-0 and branch to IMOD_4-5-0
3/25/12: Made Findcontrast scale data properly for float data regardless of